# porter-app

./: CHANGELOG.md  IMPLEMENTATION.md  LICENSE  README.MD  RELEASE.md  RELEASE_CHECKLIST.md  bump-version.ps1  bump-version.sh  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build.yml  release.yml
docs/: custom-window-controls.md  github-release-guide.md  init-r-n-d.md  technical-implementation-tauri.md  user-flow-and-ux.md  version-management.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs  port.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: admin.rs  mod.rs  port_monitor.rs  process_manager.rs
src/components/: TitleBar.tsx
src/components/dashboard/: AboutDialog.tsx  AdminWarning.tsx  Footer.tsx  Header.tsx  PortCard.tsx  PortDetailModal.tsx  PortGrid.tsx  PortListItem.tsx  PortScanLoader.tsx  PortSettings.tsx  SearchBar.tsx  StatsCard.tsx  StatusFilter.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  card.tsx  input.tsx  toast.tsx
src/config/: about.ts
src/hooks/: usePorts.ts
src/lib/: portTypes.ts  tauri.ts  utils.ts
src/store/: themeStore.ts
src/types/: api.ts
